refix Bug ZK-2359: Autopaging causes flickering of list

--- a/src/main/resources/web/atlantic/js/zul/grid/less/grid.less
+++ b/src/main/resources/web/atlantic/js/zul/grid/less/grid.less
@@ -244,8 +244,11 @@
 }
 .z-grid-autopaging {
 	.z-row-content,
-	.z-group-content,
 	.z-groupfoot-content {
+		height: 32px;
+		overflow: hidden;
+	}
+	.z-group-content {
 		height: 30px;
 		overflow: hidden;
 	}
