--- a/src/main/resources/web/atlantic/js/zul/sel/less/listbox.less
+++ b/src/main/resources/web/atlantic/js/zul/sel/less/listbox.less
@@ -357,7 +357,7 @@
 	}
 }
 .z-listbox-autopaging .z-listcell-content {
-	height: 30px;
+	height: 32px;
 	overflow: hidden;
 }
 //column menu
